...
                items(state.orderReward, key = { it.reward.id }) { item ->
                    CartItem(
                        rewardId = item.reward.id,
                        image = item.reward.image,
                        title = item.reward.title,
                        totalPoint = item.reward.requiredPoint * item.count,
                        count = item.count,
                        onProductCountChanged = onProductCountChanged
                    )
                    Divider()
                }
            }
        }
...
